japanese config yomiyasui!!!!!!

--- a/squid.conf
+++ b/squid.conf
@@ -5,12 +5,14 @@
 # Example rule allowing access from your local networks.
 # Adapt to list your (internal) IP networks from where browsing
 # should be allowed
+#ローカルネットワークの定義
 acl localnet src 10.0.0.0/8	# RFC1918 possible internal network
 acl localnet src 172.16.0.0/12	# RFC1918 possible internal network
 acl localnet src 192.168.0.0/16	# RFC1918 possible internal network
 acl localnet src fc00::/7       # RFC 4193 local private network range
 acl localnet src fe80::/10      # RFC 4291 link-local (directly plugged) machines
 
+#接続先として指定されているポート以外拒否
 acl SSL_ports port 443
 acl Safe_ports port 80		# http
 acl Safe_ports port 21		# ftp
@@ -34,13 +36,15 @@ http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
 
 # Only allow cachemgr access from localhost
+#キャッシュの設定（マネージャを指定しないと無効な値になる）
 http_access allow localhost manager
 http_access deny manager
 
 # We strongly recommend the following be uncommented to protect innocent
 # web applications running on the proxy server who think the only
 # one who can access services on "localhost" is a local user
-#http_access deny to_localhost
+#ローカルネットワークからのアクセスをじゃけん許可しましょね～
+http_access deny to_localhost
 
 #
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
