--- a/squid.conf
+++ b/squid.conf
@@ -43,7 +43,7 @@ http_access deny manager
 # We strongly recommend the following be uncommented to protect innocent
 # web applications running on the proxy server who think the only
 # one who can access services on "localhost" is a local user
-#ローカルネットワークからのアクセスをじゃけん許可しましょね～
+
 http_access deny to_localhost
 
 #
@@ -53,10 +53,14 @@ http_access deny to_localhost
 # Example rule allowing access from your local networks.
 # Adapt localnet in the ACL section to list your (internal) IP networks
 # from where browsing should be allowed
+#ローカルネットワークからのアクセスを許可
 http_access allow localnet
+
+#自身からのアクセスも許可をする
 http_access allow localhost
 
 # And finally deny all other access to this proxy
+#ここまで一致しない場合は拒否
 http_access deny all
 
 # Squid normally listens to port 3128
@@ -66,11 +70,12 @@ http_port 3128
 #cache_dir ufs /var/spool/squid 100 16 256
 
 # Leave coredumps in the first cache dir
+#Coreの出力用
 coredump_dir /var/spool/squid
 
 #
 # Add any of your own refresh_pattern entries above these.
-#
+#キャッシュの設定
 refresh_pattern ^ftp:		1440	20%	10080
 refresh_pattern ^gopher:	1440	0%	1440
 refresh_pattern -i (/cgi-bin/|\?) 0	0%	0
