--- a/squid.conf
+++ b/squid.conf
@@ -24,15 +24,23 @@ acl Safe_ports port 280		# http-mgmt
 acl Safe_ports port 488		# gss-http
 acl Safe_ports port 591		# filemaker
 acl Safe_ports port 777		# multiling http
+acl Safe_ports port 8080  # http
+acl Safe_ports port 23    # ssh
+acl Safe_ports port 22    # telnet
 acl CONNECT method CONNECT
 
+#blacklist有効化
+acl blacklist dstdomain "/etcsquid/blacklist"
+http_access deny blacklist
 #
 # Recommended minimum Access Permission configuration:
 #
 # Deny requests to certain unsafe ports
+#接続先として指定されているポート以外拒否
 http_access deny !Safe_ports
 
 # Deny CONNECT to other than secure SSL ports
+#SSL接続時に443ポート以外のコネクトを拒否
 http_access deny CONNECT !SSL_ports
 
 # Only allow cachemgr access from localhost
