blacklist setting update

--- a/squid.conf
+++ b/squid.conf
@@ -30,7 +30,7 @@ acl Safe_ports port 22    # telnet
 acl CONNECT method CONNECT
 
 #blacklist有効化
-acl blacklist dstdomain "/etcsquid/blacklist"
+acl blacklist dstdomain "/etc/squid/blacklist"
 http_access deny blacklist
 #
 # Recommended minimum Access Permission configuration:
